perf(article): 缓存文章查询并批量加载词汇